app-manifests/04-ingress/01-localai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-localai
  namespace: localai
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    argocd.argoproj.io/sync-wave: "1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localai.dev.local
      secretName: localai-tls
  rules:
    - host: localai.dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: localai-service
                port:
                  number: 8080
